# tableau-permissions

./: .gitignore  .pylintrc  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: build-and-test.yml
configs/: executive_membership.py  groups.py  permission_sets.py  project_permissions.py  protected_projects.py  top_level_projects.py
scripts/: __init__.py  tableau_setup.py
src/: exceptions.py  groups.py  permissions.py  projects.py  users.py
tests/: __init__.py  test_groups.py  test_permissions.py  test_projects.py  test_users.py
